CKAD/LABS/Services and Networking/NodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: kplabs-nodeport
spec:
  type: NodePort
  selector:
    run: nginx
  ports:
  - port: 8080
    targetPort: 80
