CKAD/LABS/Services and Networking/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kplabs-service
spec:
  ports:
  - port: 8080
    targetPort: 80

#  kubectl create deployment  nginx --image=nginx --port 80
# kubectl scale deployment nginx --replicas=2  
# kubectl run -it ubuntu --image=ubuntu
# apt-get update && apt-get install curl -y


# Port & TargetPort
# kubectl run nginx1 --image=mykplabs/kubernetes:nginx --restart=Never
# kubectl expose pod nginx1 --port 8080 --target-port 9080  
# kubectl run busybox --image=busybox --restart-Never --commmand sleep 3600
# kubectl exec -it busybox sh
# wget 10.245.140.28:8080
# wget 10.244.0.33:9080
