CKAD/LABS/Services and Networking/troubleshoot-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: kplabs-service
  name: kplabs-fix
spec:
  replicas: 2
  selector:
    matchLabels:
      run: kplabs-fix
  template:
    metadata:
      labels:
        run: kplabs-fix
    spec:
      containers:
      - image: nginx
        name: kplabs-service
---
apiVersion: v1
kind: Service
metadata:
  name: fix-service
  labels:
    run: fix-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    run: kplabs-fix

# kubectl apply -f troubleshoot-service.yaml
# kubectl run busybox --image=busybox --command sleep 3600
# kubectl exec -it busybox sh
# wget [SERVICE-IP]:8080
# kubectl edit service fix-service <-- change the targetPort to 80 instead of 8080 which is default port for nginx
